--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ mastodon-py = "^1.8.1"
 mypy = "^1.13.0"
 flake8 = "^6.0.0"
 pre-commit = "^4.0.1"
+types-requests = "^2.32.0.20241016"
 
 
 [build-system]
