chg: Improved handling of configuration file.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ include = [
     "README.md",
     "COPYING",
     "COPYING",
-    "fedivuln/conf.cfg-sample",
+    "fedivuln/conf_sample.py",
 ]
 
 
