new: [Search] Added simple search command. And added push status to Vulnerability Lookup parameter to the Stream command.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ include = [
 [tool.poetry.scripts]
 FediVuln-Register = "fedivuln.register:main"
 FediVuln-Stream = "fedivuln.stream:main"
+FediVuln-Search = "fedivuln.search:main"
 FediVuln-Publish = "fedivuln.publish:main"
 
 
