chg: [FediVuln-Publish] It is now possible to stream from Valkey instead of streaming for the HTTP event-stream.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ FediVuln-Publish = "fedivuln.publish:main"
 python = "^3.10"
 mastodon-py = "^1.8.1"
 pyvulnerabilitylookup = "^2.1.0"
+valkey = "^6.0.2"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.13.0"
