--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "poetry.core.masonry.api"
 
 [project]
 name = "FediVuln"
-version = "0.8.0"
+version = "1.0.0"
 description = "A client to gather vulnerability-related information from the Fediverse."
 authors = [
     {name = "Cédric Bonhomme", email = "cedric.bonhomme@circl.lu"}
@@ -13,7 +13,7 @@ authors = [
 license = "GPL-3.0-or-later"
 readme = "README.md"
 keywords = ["Vulnerability-Lookup", "Vulnerability", "CVE", "Fediverse", "Mastodon"]
-# classifieres is dynamic because we want to create Python classifiers automatically
+
 dynamic = ["classifiers"]
 
 requires-python = ">=3.10,<4.0"
@@ -28,6 +28,7 @@ dependencies = [
 [project.urls]
 Homepage = "https://github.com/vulnerability-lookup/FediVuln"
 Repository = "https://github.com/vulnerability-lookup/FediVuln"
+Changelog = "https://github.com/vulnerability-lookup/FediVuln/blob/main/CHANGELOG.md"
 
 
 [project.scripts]
